add mini logo:hover article

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <ul class="mainList">
             <li>JavaScript - AngularJS, ECMAScript 6, TypeScript, AJAX </li>
-            <li>Верстка( HTML5, CSS3/LESS/SASS, Responsive Layouts, Parallax, JQuery)</li>
+            <li>Верстка( HTML5, CSS3/LESS/SASS, Responsive Layouts, Parallax, JQuery, Bootstrap)</li>
         </ul>
 
         <p class="pMain2">Back:</p>
@@ -87,19 +87,28 @@
         </h3>
         <div class="row">
 
-
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt=""/></a>
-                <h3><p>HTML5, CSS3-<span class="colorAttantion">LESS</span>, Responsive Layouts, Parallax, JQuery, мобильная версия. <a
-                        class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a> <a
-                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/secondProjectEcomercGreen/index.html">&nbsp;&nbsp;Просмотр</a></p>
-                    Верстка сайта "Wapik" 4стр.</h3>
+            <article class="6u 12u$(xsmall) work-item node">
+                <a href="images/2.jpg" class="image fit thumb"><img src="images/2.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">NodeJS, ExpressJS, Bootstrap 4, Jade Templates, jQuery</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_authentication"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Аутентификация с помощью модуля PASSPORT.</h3>
+            </article>
+            <article class="6u 12u$(xsmall) work-item node">
+                <a href="images/1.jpg" class="image fit thumb"><img src="images/1.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">Express, Jade, Cookie, CSS, NodeJS(express)</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_parse-site_Express_l4"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Парсинг одного из выбранных сайтов в удобном виде</h3>
             </article>
 
+            <article class="6u 12u$(xsmall) work-item angular">
+                <a href="images/fulls/weather.jpg" class="image fit thumb"><img src="images/thumbs/weather.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_weather"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/weather/">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Работа с API сервиса о погоде</h3>
+            </article>
 
-
-
-            <article class="6u$ 12u$(xsmall) work-item">
+            <article class="6u$ 12u$(xsmall) work-item angular">
                 <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
                 <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
                         class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/angular_ejednev/index.html">&nbsp;&nbsp;Просмотр</a></p>
@@ -107,7 +116,37 @@
             </article>
 
 
-            <article class="6u 12u$(xsmall) work-item">
+            <article class="6u 12u$(xsmall) work-item node">
+                <a href="images/3.jpg" class="image fit thumb"><img src="images/3.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">NodeJS, ExpressJS, Jade Templates, MySQL, jQuery, Bootstrap</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS-CRUD-MySQL"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>CRUD операции с MySQL, NodeJS</h3>
+            </article>
+
+
+            <article class="6u 12u$(xsmall) work-item angular">
+                <a href="images/thumbs/valid.jpg" class="image fit thumb"><img src="images/thumbs/valid.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_ValidForm"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/validAng/">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Валидация формы на AngularJS</h3>
+            </article>
+
+            <article class="6u 12u$(xsmall) work-item css">
+                <a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt=""/></a>
+                <h3><p>HTML5, CSS3-<span class="colorAttantion">LESS</span>, Responsive Layouts, Parallax, JQuery, мобильная версия. <a
+                        class="iconListLink" href="https://github.com/DenysSidorov/secondEcommerc">GitHub</a> <a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/secondProjectEcomercGreen/index.html">&nbsp;&nbsp;Просмотр</a></p>
+                    Верстка сайта "Wapik" 4стр.</h3>
+            </article>
+            <article class="6u$ 12u$(xsmall) work-item angular">
+                <a href="images/fulls/angularMail.jpg" class="image fit thumb"><img src="images/fulls/angularMail.jpg" alt=""/></a>
+                <h3><p>HTML, CSS <span class="colorAttantion">AngularJS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_mail_app"> &nbsp&nbsp;GitHub</a> </p></h3>
+                <h3>Интерфейс почтового сервиса на Angular, routes, edit contact, view message</h3>
+            </article>
+
+            <article class="6u 12u$(xsmall) work-item php">
                 <a href="images/fulls/shop.jpg" class="image fit thumb"><img src="images/thumbs/shop.jpg" alt=""/></a>
                 <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
                         class="iconListLink" href="https://github.com/DenysSidorov/shop.les"> &nbsp;GitHub</a> <a
@@ -115,7 +154,25 @@
                 <h3>Онлайн магазин и админка на основе своей реализации паттерна MVC</h3>
             </article>
 
-            <article class="6u$ 12u$(xsmall) work-item">
+
+            <article class="6u 12u$(xsmall) work-item php">
+                <a href="images/fulls/mvc.jpg" class="image fit thumb"><img src="images/thumbs/mvc.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
+                        class="iconListLink" href="https://github.com/DenysSidorov/mvc.les">GitHub</a> </p>
+                    Собственная реализация MVC шаблона PHP + MySQL (Блог)</h3>
+            </article>
+
+
+            <article class="6u 12u$(xsmall) work-item css">
+                <a href="images/fulls/third.jpg" class="image fit thumb"><img src="images/thumbs/third.jpg" alt=""/></a>
+                <h3><p>HTML5, JQuery, CSS3- <span class="colorAttantion"> LESS</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/verstThirdPointSlider"> &nbsp;GitHub</a> <a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/vesrtThirdBlack/index.html">&nbsp;&nbsp;Просмотр</a></p></h3>
+                <h3>Верстка сайта "Sevent" в темных цветах</h3>
+            </article>
+
+
+            <article class="6u$ 12u$(xsmall) work-item css">
                 <a href="images/fulls/camo.jpg" class="image fit thumb"><img src="images/thumbs/camo.jpg" alt=""/></a>
                 <h3><p><span class="colorAttantion">LESS &nbsp;</span>JQuery, AJAX,HTML5, CSS3 &nbsp;<a class="iconListLink" href="https://github.com/DenysSidorov/forthEcommercAjaxMenu">GitHub</a><a
                         class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/verstCamoOldDesign_T/index.html">&nbsp;&nbsp;Просмотр</a></p>
@@ -124,90 +181,54 @@
 
 
 
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/third.jpg" class="image fit thumb"><img src="images/thumbs/third.jpg" alt=""/></a>
-                <h3><p>HTML5, JQuery, CSS3- <span class="colorAttantion"> LESS</span><a
-                        class="iconListLink" href="https://github.com/DenysSidorov/verstThirdPointSlider"> &nbsp;GitHub</a> <a
-                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/vesrtThirdBlack/index.html">&nbsp;&nbsp;Просмотр</a></p></h3>
-                <h3>Верстка сайта "Sevent" в темных цветах</h3>
-            </article>
 
-            <article class="6u$ 12u$(xsmall) work-item">
-                <a href="images/fulls/angularMail.jpg" class="image fit thumb"><img src="images/fulls/angularMail.jpg" alt=""/></a>
-                <h3><p>HTML, CSS <span class="colorAttantion">AngularJS</span><a
-                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_mail_app"> &nbsp&nbsp;GitHub</a> </p></h3>
-                <h3>Интерфейс почтового сервиса на Angular, routes, edit contact, view message</h3>
-            </article>
-
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/mvc.jpg" class="image fit thumb"><img src="images/thumbs/mvc.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">PHP(MVC) + MySQL&nbsp;&nbsp;</span> <a
-                        class="iconListLink" href="https://github.com/DenysSidorov/mvc.les">GitHub</a> </p>
-                    Собственная реализация MVC шаблона PHP + MySQL (Блог)</h3>
-            </article>
-
-
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/fulls/weather.jpg" class="image fit thumb"><img src="images/thumbs/weather.jpg" alt=""/></a>
-                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
-                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_weather"> &nbsp;GitHub</a> <a
-                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/weather/">&nbsp;&nbsp;Просмотр</a></p></h3>
-                <h3>Работа с API сервиса о погоде</h3>
-            </article>
-
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/thumbs/valid.jpg" class="image fit thumb"><img src="images/thumbs/valid.jpg" alt=""/></a>
-                <h3><p>HTML5, CSS3- <span class="colorAttantion">AngualrJS</span><a
-                        class="iconListLink" href="https://github.com/DenysSidorov/AngularJS_ValidForm"> &nbsp;GitHub</a> <a
-                        class="iconListLink" href="http://php-mvc-shop.zzz.com.ua/validAng/">&nbsp;&nbsp;Просмотр</a></p></h3>
-                <h3>Валидация формы на AngularJS</h3>
-            </article>
 
             <!--////////////////////////////////////////////////////-->
 
-            <article class="6u 12u$(xsmall) work-item">
+            <article class="6u 12u$(xsmall) work-item node">
                 <a href="images/fulls/NodeBlog.jpg" class="image fit thumb"><img src="images/fulls/NodeBlog.jpg" alt=""/></a>
                 <h3><p>HTML5, CSS3 <span class="colorAttantion">NodeJS (Express)</span><a
                         class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_Blog"> &nbsp;GitHub</a> </p></h3>
                 <h3>Портфолио дизайнеров с их работами на NodeJS </h3>
             </article>
 
-            <article class="6u 12u$(xsmall) work-item">
+            <article class="6u 12u$(xsmall) work-item java">
                 <a href="images/fulls/petClinic.png" class="image fit thumb"><img src="images/fulls/petClinic.png" alt=""/></a>
                 <h3><p>OOP, Servlets<span class="colorAttantion">Java</span><a
                         class="iconListLink" href="https://github.com/DenysSidorov/clinicPetWeb"> &nbsp&nbsp;GitHub</a> </p></h3>
                 <h3>Реализация CRUD оперций на JAVA-сервлетах </h3>
             </article>
 
-            <article class="6u 12u$(xsmall) work-item">
+            <article class="6u 12u$(xsmall) work-item node">
                 <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
                 <h3><p><span class="colorAttantion">NodeJS (sendmailer)</span><a
                         class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_sendMail_l31"> &nbsp&nbsp;GitHub</a> </p></h3>
                 <h3>Программа отправляющая mail-почту на указанные адреса.</h3>
             </article>
 
-
-
-            <article class="6u 12u$(xsmall) work-item">
-            <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
-            <h3><p><span class="colorAttantion">NodeJS (request)</span><a
-                    class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_translater_l32/blob/master/main.js"> &nbsp&nbsp;GitHub</a> </p></h3>
-            <h3>Программа-переводчик использующая API Яндекса.</h3>
-        </article>
-
-            <article class="6u 12u$(xsmall) work-item">
+            <article class="6u 12u$(xsmall) work-item node">
                 <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
                 <h3><p><span class="colorAttantion">NodeJS (fs)</span><a
                         class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_l2_game_log"> &nbsp&nbsp;GitHub</a> </p></h3>
                 <h3>Консольная игра, работающая по принципу угадывания числа, записью в файл. Плюс вторая программа читающая лог и выводящиая статистику по игре.</h3>
             </article>
 
-            <article class="6u 12u$(xsmall) work-item">
-                <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
-                <h3><p><span class="colorAttantion">Express, Jade, Cookie, CSS, NodeJS(express)</span><a
-                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_parse-site_Express_l4"> &nbsp&nbsp;GitHub</a> </p></h3>
-                <h3>Парсинг одного из выбранных сайтов в удобном виде</h3>
-            </article>
+            <article class="6u 12u$(xsmall) work-item node">
+            <a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>
+            <h3><p><span class="colorAttantion">NodeJS (request)</span><a
+                    class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_translater_l32/blob/master/main.js"> &nbsp&nbsp;GitHub</a> </p></h3>
+            <h3>Программа-переводчик использующая API Яндекса.</h3>
+        </article>
+
+
+
+            <!--<article class="6u 12u$(xsmall) work-item">-->
+                <!--<a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>-->
+                <!--<h3><p><span class="colorAttantion">Express, Jade, Cookie, CSS, NodeJS(express)</span><a-->
+                        <!--class="iconListLink" href="https://github.com/DenysSidorov/NodeJS_parse-site_Express_l4"> &nbsp&nbsp;GitHub</a> </p></h3>-->
+                <!--<h3>Парсинг одного из выбранных сайтов в удобном виде</h3>-->
+            <!--</article>-->
+
 
             <!--////////////////////////////////////////////////////-->
 
