--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
                 <h3>Аутентификация с помощью модуля PASSPORT.</h3>
             </article>
 
+            <article class="6u 12u$(xsmall) work-item node">
+                <a href="images/mongocrud.jpg" class="image fit thumb"><img src="images/mongocrud.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">NodeJS, MongoBD, ExpressJS, jQuery, Bootstrap.</span><a
+                        class="iconListLink" href="https://github.com/DenysSidorov/NodeJS-CRUD-MongoDB"> &nbsp&nbsp;GitHub</a>
+                </p></h3>
+                <h3>CRUD operations with NodeJS, MongoBD, ExpressJS, jQuery, Bootstrap. </h3>
+            </article>
+
             <article class="6u 12u$(xsmall) work-item react">
                 <a href="images/r1.jpg" class="image fit thumb"><img src="images/r1.jpg" alt=""/></a>
                 <h3><p><span class="colorAttantion">ReactJS, Flexbox</span><a
@@ -168,15 +176,7 @@
             </article>
 
 
-            <article class="6u$ 12u$(xsmall) work-item angular">
-                <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
-                <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink"
-                                                                                                    href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
-                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/angular_ejednev/index.html">
-                    &nbsp;&nbsp;Просмотр</a></p>
-                    Web-приложение, реализуещее ежедневник на AngularJS 1.x
-                </h3>
-            </article>
+
 
 
             <article class="6u 12u$(xsmall) work-item node">
@@ -313,6 +313,16 @@
                         href="https://github.com/DenysSidorov/NodeJS-Rest-Api-with-Mongo-l7"> &nbsp&nbsp;GitHub</a>
                 </p></h3>
                 <h3>REST API (crud) с подключением к MongoDB</h3>
+            </article>
+
+            <article class="6u$ 12u$(xsmall) work-item angular">
+                <a href="images/fulls/22.jpg" class="image fit thumb"><img src="images/thumbs/22.jpg" alt=""/></a>
+                <h3><p><span class="colorAttantion">AngularJS 1.x</span>, LodashJS, CSS3, HTML5. <a class="iconListLink"
+                                                                                                    href="https://github.com/DenysSidorov/AngularJS_Items">GitHub</a><a
+                        class="iconListLink" href="http://denis-sidorov.zzz.com.ua/projects/angular_ejednev/index.html">
+                    &nbsp;&nbsp;Просмотр</a></p>
+                    Web-приложение, реализуещее ежедневник на AngularJS 1.x
+                </h3>
             </article>
             <!--<article class="6u 12u$(xsmall) work-item">-->
             <!--<a href="images/nodejs-logo.png" class="image fit thumb"><img src="images/nodejs-logo.png" alt=""/></a>-->
